--- a/compra-zapatillas/css/styles.css
+++ b/compra-zapatillas/css/styles.css
@@ -69,7 +69,7 @@ main {
   align-items: center;
   gap: 2rem;
   margin-top: 2rem;
-  flex-wrap: wrap;
+  
 }
 
 .text-content {
@@ -112,10 +112,12 @@ main {
 .cta-button {
   background-color: var(--primary-color);
   color: white;
-  padding: 1rem 2rem;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.2em;
   text-decoration: none;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
 }
 
 .cta-button:hover {
@@ -124,7 +126,7 @@ main {
 
 .products {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 2rem;
 }
 
@@ -134,17 +136,62 @@ main {
   border-radius: 8px;
   padding: 1rem;
   text-align: center;
-  transition: transform 0.3s ease;
 }
 
-.product-card:hover {
-  transform: scale(1.05);
+.product-card a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .product-image {
-  max-width: 60%; /* Ajustamos el zoom de las zapatillas */
+  max-width: 100%;
   height: auto;
   border-radius: 8px;
+}
+
+.product-detail-container {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.product-image-container {
+  flex: 1;
+}
+
+.product-image-detail {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.product-info-container {
+  flex: 2;
+  font-size: 1.2em;
+  line-height: 1.6;
+}
+
+.product-info-container h1 {
+  font-size: 2em;
+  margin-bottom: 1rem;
+}
+
+.product-info-container p {
+  margin-bottom: 1rem;
+}
+
+.product-info-container button {
+  padding: 0.5rem 1rem;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1.2em;
+}
+
+.product-info-container button:hover {
+  background-color: #2980b9;
 }
 
 footer {
@@ -190,6 +237,13 @@ button:hover {
 a {
   text-decoration: none;
 }
+
+.product-card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
 @media (max-width: 768px) {
   .about-content {
     flex-direction: column;
@@ -207,6 +261,19 @@ a {
   }
 
   .image-content img {
+    max-width: 80%;
+  }
+
+  .product-detail-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .product-info-container {
+    font-size: 1em;
+  }
+
+  .product-image-detail {
     max-width: 80%;
   }
 }
