--- a/UT3/EC/07/assets/css/styles.css
+++ b/UT3/EC/07/assets/css/styles.css
@@ -20,21 +20,23 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 20px 20px 0 20px; /* Ajustar el padding para que la W esté alineada con la imagen */
+  padding: 20px 20px 0 20px;
   background-color: var(--off-white);
 }
 
 .logo {
-  font-size: 4em; /* Aumentar el tamaño de la fuente */
+  font-size: 4em;
   font-weight: 800;
-  margin-bottom: 10px; /* Ajustar margen inferior para alineación vertical */
+  margin-bottom: 10px;
+  margin-left: 12%;
 }
 
 .navigation {
   display: flex;
-  gap: 20px; /* Espacio entre los enlaces de navegación */
+  gap: 20px;
   margin-left: auto;
-  padding-bottom: 10px; /* Ajustar padding inferior para alineación */
+  padding-bottom: 10px;
+  margin-right: 12%;
 }
 
 .navigation a {
@@ -44,7 +46,6 @@ body {
   font-size: 1.2em;
   margin: 0 0 10px 0;
   cursor: pointer;
-  background-color: white;
 }
 
 .navigation a:hover {
@@ -56,12 +57,11 @@ body {
   margin: 0 auto;
   padding: 20px;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 20px;
 }
 
 .main-news {
-  grid-column: 1 / 3; /* Ocupa las primeras dos columnas */
   display: flex;
   flex-direction: column;
 }
@@ -73,18 +73,35 @@ body {
 }
 
 .main-news-content {
-  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.main-news-text {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
 
 .main-news-title {
-  font-size: 3em; /* Aumentar el tamaño de la fuente */
+  font-size: 3em;
   font-weight: 800;
-  margin: 0 0 10px 0;
+  margin: 0;
+  flex: 1;
+}
+
+.main-news-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 2;
 }
 
 .main-news-description {
-  font-size: 1.2em; /* Aumentar el tamaño de la fuente */
-  margin: 0 0 20px 0;
+  font-size: 1.2em;
+  margin: 0;
   font-weight: 400;
   color: var(--dark-grayish-blue);
 }
@@ -93,16 +110,17 @@ body {
   background-color: var(--soft-red);
   color: var(--off-white);
   border: none;
-  padding: 15px 30px; /* Aumentar el padding */
+  padding: 15px 30px;
   border-radius: 5px;
   cursor: pointer;
   font-weight: 700;
-  font-size: 1.1em; /* Aumentar el tamaño de la fuente */
+  font-size: 1.1em;
   transition: background-color 0.3s;
+  align-self: flex-start;
 }
 
 .read-more-button:hover {
-  background-color: hsl(5, 85%, 53%);
+  background-color: hsl(240, 100%, 5%);
 }
 
 .new-articles {
@@ -113,7 +131,7 @@ body {
 }
 
 .new-articles-title {
-  font-size: 2.2em; /* Aumentar el tamaño de la fuente */
+  font-size: 2.2em;
   font-weight: 800;
   margin: 0 0 20px 0;
   color: var(--soft-orange);
@@ -124,11 +142,10 @@ body {
 }
 
 .article-title {
-  font-size: 1.5em; /* Aumentar el tamaño de la fuente */
+  font-size: 1.5em;
   font-weight: 700;
   margin: 0 0 5px 0;
   color: white;
-  background-color: var(--very-dark-blue);
   cursor: pointer;
 }
 
@@ -137,58 +154,69 @@ body {
 }
 
 .article-description {
-  font-size: 1.1em; /* Aumentar el tamaño de la fuente */
+  font-size: 1.1em;
   font-weight: 400;
   color: var(--grayish-blue);
 }
 
 .secondary-articles {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  justify-content: space-between;
   gap: 20px;
 }
 
 .secondary-article {
   background-color: var(--off-white);
-  border-radius: 8px;
-  overflow: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  flex-direction: row;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  width: 30%;
 }
 
 .secondary-article-image {
-  width: 100%;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .secondary-article-content {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+}
+
+.secondary-article-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .secondary-article-title {
-  font-size: 3em; /* Ajustar el tamaño de los números */
+  font-size: 1.5em;
   font-weight: 800;
-  color: var(--soft-orange);
-  margin-bottom: 10px; /* Aumentar el margen */
+  color: hsl(233, 8%, 79%);
+  padding: 5px 10px;
+  border-radius: 5px;
 }
 
 .secondary-article-subtitle {
-  font-size: 1.5em; /* Aumentar el tamaño de la fuente */
+  font-size: 1.2em;
   font-weight: 700;
   color: var(--very-dark-blue);
-  margin: 0 0 10px 0;
+  margin: 0;
   cursor: pointer;
 }
 
 .secondary-article-subtitle:hover {
-  color: red;
+  color: var(--soft-orange);
 }
 
 .secondary-article-description {
-  font-size: 1.2em; /* Aumentar el tamaño de la fuente */
+  font-size: 1em;
   font-weight: 400;
   color: var(--dark-grayish-blue);
   margin: 0;
